refactor: restructure components into feature-based modules, add new experiments, and introduce project documentation.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
-import Navbar from '../components/Navbar';
-import NewsletterSignup from '../components/NewsletterSignup';
+import Navbar from '../components/layout/Navbar';
+
 import { THEMES } from '../lib/themes';
 
 // We can't easily access the store state on the server for initial render without some work,
