--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Hero from '../components/Hero';
-import BlogList from '../components/BlogList';
+import Hero from '../components/features/home/Hero';
+import BlogList from '../components/features/blog/BlogList';
 import { getCollection } from 'astro:content';
 
 const posts = (await getCollection('posts')).sort(
@@ -11,5 +11,5 @@ const posts = (await getCollection('posts')).sort(
 
 <Layout title="Emilio Harrison | UX Researcher & Creative Technologist">
     <Hero client:load />
-    <BlogList client:load posts={posts} />
+    <BlogList client:visible posts={posts} />
 </Layout>
