--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,5 +4,5 @@ import AboutContent from '../components/features/about/AboutContent';
 ---
 
 <Layout title="About | Emilio Harrison">
-    <AboutContent client:load />
+    <AboutContent client:visible />
 </Layout>
