--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,5 +4,5 @@ import ContactContent from '../components/features/contact/ContactContent';
 ---
 
 <Layout title="Contact | Emilio Harrison">
-    <ContactContent client:load />
+    <ContactContent client:visible />
 </Layout>
