--- a/src/pages/lab.astro
+++ b/src/pages/lab.astro
@@ -4,5 +4,5 @@ import LabContent from '../components/features/lab/LabContent';
 ---
 
 <Layout title="The Lab | Emilio Harrison">
-    <LabContent client:load />
+    <LabContent client:visible />
 </Layout>
