--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -4,5 +4,5 @@ import ShopContent from '../components/features/shop/ShopContent';
 ---
 
 <Layout title="Shop | Emilio Harrison">
-    <ShopContent client:load />
+    <ShopContent client:visible />
 </Layout>
