--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -15,13 +15,13 @@ import { THEMES } from '../lib/themes';
         </div>
         
         <div class="flex flex-wrap gap-4 justify-center">
-            <BrutalButton client:load href="/" theme={THEMES.default}>
+            <BrutalButton href="/" theme={THEMES.default}>
                 ← Back to Home
             </BrutalButton>
-            <BrutalButton client:load href="/fieldnotes" theme={THEMES.default}>
+            <BrutalButton href="/fieldnotes" theme={THEMES.default}>
                 Read Field Notes
             </BrutalButton>
-            <BrutalButton client:load href="/lab" theme={THEMES.default}>
+            <BrutalButton href="/lab" theme={THEMES.default}>
                 Explore Lab
             </BrutalButton>
         </div>
