--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,17 @@ import { getCollection } from 'astro:content';
 const posts = (await getCollection('posts')).sort(
 	(a, b) => new Date(b.data.date).valueOf() - new Date(a.data.date).valueOf()
 );
+// Extract unique tags and categories
+const allTags = [...new Set(posts.flatMap(post => post.data.tags || []))].sort();
+const allCategories = [...new Set(posts.map(post => post.data.category).filter(Boolean))].sort();
 ---
 
 <Layout title="Emilio Harrison | UX Researcher & Creative Technologist">
     <Hero client:visible />
-    <BlogList client:visible posts={posts} />
+    <BlogList 
+        client:visible 
+        posts={posts} 
+        allTags={allTags} 
+        allCategories={allCategories}
+    />
 </Layout>
