--- a/src/pages/fieldnotes/index.astro
+++ b/src/pages/fieldnotes/index.astro
@@ -27,7 +27,13 @@ const posts = allPosts
         return dateB.valueOf() - dateA.valueOf();
     });
 
-// Extract unique tags and categories
+const allTagsCollection = await getCollection('tags');
+const allCategoriesCollection = await getCollection('categories');
+
+const tagsMap = Object.fromEntries(allTagsCollection.map(t => [t.id, t.data.name]));
+const categoriesMap = Object.fromEntries(allCategoriesCollection.map(c => [c.id, c.data.name]));
+
+// Extract unique tags and categories (slugs)
 const allTags = [...new Set(posts.flatMap(post => post.data.tags || []))].sort();
 const allCategories = [...new Set(posts.map(post => post.data.category).filter(Boolean))].sort();
 
@@ -46,6 +52,8 @@ const initialFilters = {
         posts={posts} 
         allTags={allTags} 
         allCategories={allCategories}
+        tagsMap={tagsMap}
+        categoriesMap={categoriesMap}
         initialFilters={initialFilters}
     />
 </Layout>
