--- a/apps/recipes/src/pages/index.astro
+++ b/apps/recipes/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import RecipeLayout from '../layouts/RecipeLayout.astro';
-import RecipeManagerClient from '../components/recipe-manager/RecipeManager.jsx';
+import RecipeLayout from '../layouts/RecipeLayout.astro'
+import RecipeManagerClient from '../components/recipe-manager/RecipeManager.jsx'
 ---
 
 <RecipeLayout title="My Recipes">
